<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWhite"
    tools:context=".activities.Activity_MainPage">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="10dp">

            <TextView
                android:id="@+id/main_LBL_familyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/PrimaryDarkBlue"
                android:textSize="30sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="9dp"
            android:layout_weight="6"
            app:cardCornerRadius="20dp"
            app:cardElevation="3dp"
            app:cardForegroundColor="@color/cardview_shadow_end_color">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/PrimaryDarkBlue"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/main_LBL_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="Hello, Vadim"
                    android:textColor="@color/PrimaryWhiteYellow"
                    android:textSize="20sp">

                </TextView>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/latest_family_updates"
                    android:textColor="@color/PrimaryWhiteYellow">

                </TextView>

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/PrimaryWhiteYellow" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/updates_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    tools:listitem="@layout/recyclerview_item_updates">

                </androidx.recyclerview.widget.RecyclerView>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/main_BTN_myFamily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/PrimaryDarkBlue"
                android:text="@string/my_family" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/main_BTN_myProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/PrimaryDarkBlue"
                android:text="@string/my_profile" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                app:itemBackground="@color/PrimaryBlueGray"
                app:itemIconTint="@drawable/selector"
                app:itemTextColor="@drawable/selector"
                app:menu="@menu/menu_navigation" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>




</RelativeLayout>